--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
-The Bean Truck!
-Beans are good food!
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>The Bean Truck! - Homepage</title>
+  <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-Our Mission
-Menu
-Where is The Truck?
+      <h1>Beans are good food!</h1>
 
+      <ul id="list1">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Mission.html">Mission</a></li>
+        <li><a href="Menu.html">Menu</a></li>
+        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+      </ul>
 
-The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes.
-
-Follow us on Twitter!
+</head>
+<body>
+<div>
+<p>The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes.</p>
+</div>
+<footer>
+<h>Follow us on Twitter!</h>
+</footer>
+</body>
+</html>
