--- a/where_is_the_truck.html
+++ b/where_is_the_truck.html
@@ -1,21 +1,38 @@
-The Bean Truck!
-Beans are good food!
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>The Bean Truck! - Where Are We?</title>
+  <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-Our Mission
-Menu
-Where is The Truck? 
+      <h1>Beans are good food!</h1>
 
-Where is the truck now?
-(MAP WIDGET HERE)
+      <ul id="list1">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Mission.html">Mission</a></li>
+        <li><a href="Menu.html">Menu</a></li>
+        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+      </ul>
 
+<body>
 
-Upcoming Events
+<h2>Where is the truck now?</h2>
+
+<h3>Upcoming Events</h3>
 Look for the bean truck at the following upcoming events:
+<ol>
 
-* September 26-27: World Meeting of Families (where we will serve our special papal bean and pasta soup Papa e f
-Fagioli)
-* October 2-4: Manayunk Food Truck Festival
-* October 7: Gurrellia Food Truck Wednesday at Drexel
-* October 9-10: Fairmount Park Truck Meet
-* October 17: Conshohocken Brewery Food Truck Night
-* October 31: Spooky Food Truck Halloween
+<li>September 26-27: World Meeting of Families (where we will serve our special papal bean and pasta soup Papa e f
+Fagioli)</li>
+<li>October 2-4: Manayunk Food Truck Festival</li>
+<li>October 7: Gurrellia Food Truck Wednesday at Drexel</li>
+<li>October 9-10: Fairmount Park Truck Meet</li>
+<li>October 17: Conshohocken Brewery Food Truck Night</li>
+<li>October 31: Spooky Food Truck Halloween</li>
+</ol>
+</body>
+<footer>
+<h>Follow us on Twitter!</h>
+</footer>
+</html>
