--- a/menu.html
+++ b/menu.html
@@ -1,36 +1,65 @@
-The Bean Truck!
-Beans are good food!
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>The Bean Truck! - Menu</title>
+  <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+      <h1>Beans are good food!</h1>
 
-Our Mission
-Menu
-Where is The Truck? 
+      <ul id="list1">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Mission.html">Mission</a></li>
+        <li><a href="Menu.html">Menu</a></li>
+        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+      </ul>
 
-Menu
+<body>
+<div id="MenuHeading" class="menu">
+<h2>Menu</h2>
+</div>
+<div id="apps" class="menu">
+<h3>Appetizers</h3>
+<ul>
 
-Appetizers
+<li><strong>Farinata</strong>: A light, crispy pancake made of chickpea flour and seasoned with rosemary and black pepper.</li>
 
-Farinata: A light, crispy pancake made of chickpea flour and seasoned with rosemary and black pepper.
+<li><strong>Hummus</strong>: The classic chickpea dip. Ours has sriacha and lots of lemon. Served with pita and oil-cured black olives.</li>
 
-Hummus: The classic chickpea dip. Ours has sriacha and lots of lemon. Served with pita and oil-cured black olives.
+<li><strong>White Bean Dip</strong>: Creamy cannelini beans mashed with olive oil, oregano, and lots of black pepper. Served with crostini and piave cheese.</li>
+</ul>
 
-White Bean Dip: Creamy cannelini beans mashed with olive oil, oregano, and lots of black pepper. Served with crostini and piave cheese
+<h3>Soups</h3>
 
-Soups
+<ul>
 
-Tuscan Bean: White bean soup with kale, sausage and pancetta.
+<li><strong>Tuscan Bean</strong>: White bean soup with kale, sausage and pancetta.</li>
 
-Cuban Black Bean: Spicy black bean soup with lime and cilantro.
+<li><strong>Cuban Black Bean</strong>: Spicy black bean soup with lime and cilantro.</li>
 
-Red Lentil Dal: Indian red lentil soup seasoned with curry. Served with flakey paratha bread.
+<li><strong>Red Lentil Dal</strong>: Indian red lentil soup seasoned with curry. Served with flakey paratha bread.</li>
+</ul>
+</div>
 
-Sandwiches
+<div id="meals" class="menu">
+<h3>Sandwiches</h3>
+<ul>
 
-Falafel: The classic. Deep fried and crispy, loaded with cumin.
+<li><strong>Falafel</strong>: The classic. Deep fried and crispy, loaded with cumin.</li>
 
-White Bean Cake: White beans with rosemary, crisp on the outside and creamy in the middle. Served with house pickles.
+<li><strong>White Bean Cake</strong>: White beans with rosemary, crisp on the outside and creamy in the middle. Served with house pickles.</li>
+</ul>
 
-Beans 'n Rice
+<h3>Beans 'n Rice</h3>
+<ul>
 
-Beer glazed black beans: black beans Simmered in Flying Fish Oyster Stout, these spicy black beans are earthy and slightly sweet. Served with cornbread.
+<li><strong>Beer glazed black beans</strong>: black beans Simmered in Flying Fish Oyster Stout, these spicy black beans are earthy and slightly sweet. Served with cornbread.</li>
 
-Red beans and rice: The New Orleans classic, cooked with pickled pork and creole spices.
+<li><strong>Red beans and rice</strong>: The New Orleans classic, cooked with pickled pork and creole spices.</li>
+</ul>
+</div>
+</body>
+<footer>
+<h>Follow us on Twitter!</h>
+</footer>
+</html>
