--- a/our_mission.html
+++ b/our_mission.html
@@ -1,12 +1,29 @@
-The Bean Truck!
-Beans are good food!
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>The Bean Truck! - Our Mission</title>
+  <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-Our Mission
-Menu
-Where is The Truck?
+      <h1>Beans are good food!</h1>
 
-Across the globe, humble legumes of every color and size: from black turtle beans to white cannellinis, from tiny red lentils to giant cranberry beans, form the basis of classic, nourishing food enjoyed by rich and poor alike. The Bean Truck strives to bring these dishes to life for Philadelphia!
+      <ul id="list1">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Mission.html">Mission</a></li>
+        <li><a href="Menu.html">Menu</a></li>
+        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+      </ul>
 
-We're based on a simple philosophy: that healthy, tasty food can be affordable and fun! We draw on cuisines from around the world to make protein-rich, hearty soups, stews, sandwiches and more. Our beans and vegetables are all organic, and locally sourced whereever possible. We get our eggs from the Lancaster Free Range Chicken Coop. Pork is from Ithaca, New York's Piggery.
+<body>
+<h2>Mission</h2>
+<p>Across the globe, humble legumes of every color and size: from black turtle beans to white cannellinis, from tiny red lentils to giant cranberry beans, form the basis of classic, nourishing food enjoyed by rich and poor alike. The Bean Truck strives to bring these dishes to life for Philadelphia!
 
-The next time you need a real meal, made from fresh and local ingredients, look for the Bean Truck on a street near you!
+We're based on a simple philosophy: <em>that healthy, tasty food can be affordable and fun!</em> We draw on cuisines from around the world to make protein-rich, hearty soups, stews, sandwiches and more. Our beans and vegetables are all organic, and locally sourced whereever possible. We get our eggs from the Lancaster Free Range Chicken Coop. Pork is from Ithaca, New York's Piggery.
+
+The next time you need a real meal, made from fresh and local ingredients, look for the Bean Truck on a street near you!</p>
+</body>
+<footer>
+<h>Follow us on Twitter!</h>
+</footer>
+</html>
