Japanese Food Truck Insp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+<div id=header>
 <head>
-  <title>The Bean Truck! - Homepage</title>
+  <title>Briscoe's Bean Truck! - Homepage</title>
   <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -12,13 +13,20 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Mission.html">Mission</a></li>
         <li><a href="Menu.html">Menu</a></li>
-        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+        <li><a href="Where_is_the_Truck.html">Our Fleet</a></li>
       </ul>
-
+</div>
 </head>
-<body>
+<body id=body1 class="stretch">
+  <div>
+<h2> Located in Philadelphia, Briscoe's Bean Truck is the only mobile purveyor of artisanal refried beans & savory fillings.</h2>
+</div>
 <div>
-<p>The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes.</p>
+<p>Launched in 2012 and now appearing at street fairs, business parks, The Italian Market, catering events & introducing the best refried bean food truck in the country - NOW on a street near you.</p>
+
+<p>We make each refried bean meal in front of you, made to order and we make them the old school way using cast iron, flame, fresh ingredients and homemade batter.</p>
+
+<p>Named one of the ten most awesome Asian-fusion food trucks in America.The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes.</p>
 </div>
 <footer>
 <h>Follow us on Twitter!</h>
