--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+<div id=header>
 <head>
-  <title>The Bean Truck! - Menu</title>
+  <title>Briscoe's Bean Truck - Menu</title>
   <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -11,10 +12,11 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Mission.html">Mission</a></li>
         <li><a href="Menu.html">Menu</a></li>
-        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+        <li><a href="Where_is_the_Truck.html">Our Fleet</a></li>
       </ul>
+    </div>
 
-<body>
+<body id=body1 class="stretch">
 <div id="MenuHeading" class="menu">
 <h2>Menu</h2>
 </div>
