--- a/our_mission.html
+++ b/our_mission.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+<div id=header>
 <head>
-  <title>The Bean Truck! - Our Mission</title>
+  <title>Briscoe's Bean Truck - Our Mission</title>
   <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -12,10 +13,11 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Mission.html">Mission</a></li>
         <li><a href="Menu.html">Menu</a></li>
-        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+        <li><a href="Where_is_the_Truck.html">Our Fleet</a></li>
       </ul>
+    </div>
 
-<body>
+<body id=body1 class="stretch">
 <h2>Mission</h2>
 <p>Across the globe, humble legumes of every color and size: from black turtle beans to white cannellinis, from tiny red lentils to giant cranberry beans, form the basis of classic, nourishing food enjoyed by rich and poor alike. The Bean Truck strives to bring these dishes to life for Philadelphia!
 
