--- a/where_is_the_truck.html
+++ b/where_is_the_truck.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+<div id=header>
 <head>
-  <title>The Bean Truck! - Where Are We?</title>
+  <title>Briscoe's Bean Truck - Our Fleet</title>
   <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -12,12 +13,13 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Mission.html">Mission</a></li>
         <li><a href="Menu.html">Menu</a></li>
-        <li><a href="Where_is_the_Truck.html">Where is the Truck?</a></li>
+        <li><a href="Where_is_the_Truck.html">Our Fleet</a></li>
       </ul>
+    </div>
 
-<body>
+<body id=body1 class="stretch">
 
-<h2>Where is the truck now?</h2>
+<h2>Our Fleet</h2>
 
 <h3>Upcoming Events</h3>
 Look for the bean truck at the following upcoming events:
