edits during Andy office houra

--- a/menu.html
+++ b/menu.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
       <h1>Beans are good food!</h1>
-
-      <ul id="list1">
+      
+      <ul id="list1" class="active">
         <li><a href="index.html">Home</a></li>
         <li><a href="Mission.html">Mission</a></li>
         <li><a href="Menu.html">Menu</a></li>
         <li><a href="Where_is_the_Truck.html">Our Fleet</a></li>
       </ul>
-    </div>
+        </div>
 
 <body id=body1 class="stretch">
 <div id="MenuHeading" class="menu">
